# Test Makefile for SExtractor
# Copyright (C) 2007 Emmanuel Bertin.
TESTS		= efigi1.test efigi2.test efigi3.test efigi4.test
EXTRA_DIST	= galaxies.fits galaxies.weight.fits \
		  default.psf default.sex default.param \
		  default.conv  xyPSF.psf efigi1.test efigi2.test \
		  efigi3.test 
distclean-local:
		-rm *.cat *.xml
