#
#				Makefile.am
#
# WCSlib Makefile.am. Process this file with automake to generate a Makefile
#
#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
#
#	This file part of:	AstrOmatic WCS library
#
#	Copyright:		(C) 2002-2010 IAP/CNRS/UPMC
#
#	Authors:		Emmanuel Bertin (this Makefile.am)
#				Mark Calabretta (WCSlib library)
#
#	Licenses:		GNU General Public License (this file)
#				GNU Library General Public License (WCSlib)
#
#	AstrOmatic software is free software: you can redistribute it and/or
#	modify it under the terms of the GNU General Public License as
#	published by the Free Software Foundation, either version 3 of the
#	License, or (at your option) any later version.
#	AstrOmatic software is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#	GNU General Public License for more details.
#	You should have received a copy of the GNU General Public License
#	along with AstrOmatic software.
#	If not, see <http://www.gnu.org/licenses/>.
#
#	Last modified:		1010/2010
#
#%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%

noinst_LIBRARIES	= libwcs_c.a
libwcs_c_a_SOURCES	= cel.c lin.c poly.c proj.c sph.c tnx.c wcs.c \
			  wcstrig.c \
			  cel.h lin.h poly.h proj.h sph.h tnx.h wcs.h \
			  wcsmath.h wcstrig.h
EXTRA_DIST		= LICENSE README

