# Program Makefile for making the LevMar routine behave as a library
# Copyright (C) 2006-2007 Emmanuel Bertin.
# levmar code by Manolis Lourakis <lourakis@ics.forth.gr> 
noinst_LIBRARIES	= liblevmar.a
liblevmar_a_SOURCES	= lm.c Axb.c  misc.c lmlec.c  lmbc.c  \
			  lm.h misc.h
EXTRA_liblevmar_a_SOURCES = lm_core.c Axb_core.c misc_core.c lmlec_core.c \
			  lmbc_core.c
